Motivation small change

--- a/EIPS/eip-6809.md
+++ b/EIPS/eip-6809.md
@@ -29,7 +29,7 @@ From January 2021 through March 2022, the United States Federal Trade Commission
 
 We asked ourselves the same question as many have in the past, “How does one protect the wallet?”. After a while, realizing the question that should be asked is “How does one protect the asset?”. Creating the wallet is free, the asset is what has value and is worth protecting. This question led to the development of **KBTs**. A solution that is fully optional and can be tailored so far as the user is concerned. Individual assets remain protected even if the seed phrase or private key is publicly released, as long as the security feature was activated.
 
-**NFKBT's** saw the need to improve on the widely used non-fungible ERC-721 token standard. The security of non-fungible assets is a topic that concerns every entity in the crypto space, as their current and future use cases continue to be explored. **NFKBT's** provide a scalable decentralized security solution that takes security one step beyond wallet security, focusing on the token's ability to remain secure. The security is on the blockchain itself, which allows every demographic that has access to the internet to secure their assets without the need for current hardware or centralized solutions. Made to be a promising alternative, **NFKBT's** inherit all the characteristics of an ERC-721. This was done so **NFKBT's** could be used on every dApp that is configured to use traditional non-fungible tokens.
+**NFKBT's** saw the need to improve on the widely used non-fungible ERC-721 token standard. The security of non-fungible assets is a topic that concerns every entity in the crypto space, as their current and future use cases are continuously explored. **NFKBT's** provide a scalable decentralized security solution that takes security one step beyond wallet security, focusing on the token's ability to remain secure. The security is on the blockchain itself, which allows every demographic that has access to the internet to secure their assets without the need for current hardware or centralized solutions. Made to be a promising alternative, **NFKBT's** inherit all the characteristics of an ERC-721. This was done so **NFKBT's** could be used on every dApp that is configured to use traditional non-fungible tokens.
 
 During the development process, the potential advantages **KBTs** explored were the main motivation factors leading to their creation;
 
